# Studienarbeit

./: .gitignore  LICENSE  README.md  package-lock.json
code/patchwork/: Cargo.toml  README.md
code/patchwork/.github/workflow/: rust.yml
code/patchwork/action-orderer/: Cargo.toml
code/patchwork/action-orderer/benches/: performance.rs
code/patchwork/action-orderer/src/: action_list.rs  action_orderer.rs  evaluation_action_orderer.rs  lib.rs  table_action_orderer.rs
code/patchwork/action_orderer/: Cargo.toml
code/patchwork/action_orderer/benches/: performance.rs
code/patchwork/action_orderer/src/: action_list.rs  action_orderer.rs  lib.rs  noop_action_orderer.rs  table_action_orderer.rs
code/patchwork/action_sorter/: Cargo.toml
code/patchwork/action_sorter/src/: action_sorter.rs  noop_action_sorter.rs
code/patchwork/algorithms/: Cargo.toml
code/patchwork/algorithms/src/: lib.rs
code/patchwork/alphazero-player/: Cargo.toml
code/patchwork/alphazero-player/playground/: playground.ipynb
code/patchwork/alphazero-player/src/: alphazero_options.rs  alphazero_player.rs  alphazero_train.rs  game_state.rs  lib.rs  verification.rs
code/patchwork/alphazero_player/: Cargo.toml  build.rs
code/patchwork/alphazero_player/src/: alphazero_player.rs  lib.rs  resblock.rs  resnet.rs
code/patchwork/analysis/action-ordering/: Cargo.toml  values.csv  values.xlsx
code/patchwork/analysis/elo/: Cargo.toml  compare.txt
code/patchwork/analysis/empirical-measurement/: Cargo.toml
code/patchwork/analysis/empirical_measurement/: Cargo.toml
code/patchwork/analysis/max-button-income/: Cargo.toml
code/patchwork/analysis/max_button_income/: Cargo.toml
code/patchwork/analysis/player-rating/: Cargo.toml  commands.txt  games.txt  output.txt  play_history.txt
code/patchwork/application/: Cargo.toml
code/patchwork/application/src/: main.rs
code/patchwork/console/: Cargo.toml
code/patchwork/console/src/: game_loop.rs  main.rs
code/patchwork/evaluator/: Cargo.toml
code/patchwork/evaluator/benches/: performance.rs
code/patchwork/evaluator/evaluator-train/: Cargo.toml
code/patchwork/evaluator/src/: heavy_static_evaluator.rs  lib.rs  neural_network_evaluator.rs  nnue_evaluator.rs  score_evaluator.rs  static_evaluator.rs  verification.rs  win_loss_evaluator.rs
code/patchwork/game/: Cargo.toml
code/patchwork/game/src/: evaluator.rs  game.rs  lib.rs  player.rs
code/patchwork/greedy-player/: Cargo.toml
code/patchwork/greedy-player/src/: greedy_player.rs  lib.rs
code/patchwork/greedy_player/: Cargo.toml
code/patchwork/greedy_player/src/: greedy_player.rs
code/patchwork/human-player/: Cargo.toml
code/patchwork/human-player/src/: human_player.rs
code/patchwork/human_player/: Cargo.toml
code/patchwork/human_player/src/: human_player.rs
code/patchwork/mcts-player/: Cargo.toml
code/patchwork/mcts-player/src/: area_allocator.rs  lib.rs  mcts_options.rs  mcts_player.rs  node.rs  node_id.rs  search_tree.rs  tree.rs
code/patchwork/mcts_player/: Cargo.toml
code/patchwork/mcts_player/src/: mcts_options.rs  mcts_player.rs  node.rs  search_tree.rs
code/patchwork/minimax-player/: Cargo.toml
code/patchwork/minimax-player/src/: lib.rs  minimax_options.rs  minimax_player.rs
code/patchwork/minimax_player/: Cargo.toml
code/patchwork/minimax_player/src/: lib.rs  minimax_player.rs
code/patchwork/optimizing-player/: Cargo.toml
code/patchwork/optimizing-player/src/: lib.rs  optimizing_player.rs
code/patchwork/patchwork/: Cargo.toml
code/patchwork/patchwork-core/: Cargo.toml
code/patchwork/patchwork-core/benches/: performance.rs
code/patchwork/patchwork-core/src/: main.rs  patchwork.rs
code/patchwork/patchwork-lib/: Cargo.toml
code/patchwork/patchwork-lib/src/: game_manager.rs  lib.rs
code/patchwork/patchwork-macros/: Cargo.toml
code/patchwork/patchwork-macros/src/: lib.rs
code/patchwork/patchwork/src/: lib.rs  main.rs
code/patchwork/patchwork_action_sorter/: Cargo.toml
code/patchwork/patchwork_action_sorter/src/: action_sorter.rs  lib.rs  noop_action_sorter.rs
code/patchwork/patchwork_alphazero_player/: Cargo.toml
code/patchwork/patchwork_alphazero_player/src/: alphazero_player.rs  lib.rs
code/patchwork/patchwork_core/: Cargo.toml
code/patchwork/patchwork_core/benches/: performance.rs
code/patchwork/patchwork_core/src/: lib.rs  patchwork.rs
code/patchwork/patchwork_evaluator/: Cargo.toml
code/patchwork/patchwork_evaluator/src/: action_sorter.rs  lib.rs  score_evaluator.rs  static_evaluator.rs  win_loss_evaluator.rs
code/patchwork/patchwork_greedy_player/: Cargo.toml
code/patchwork/patchwork_greedy_player/src/: greedy_player.rs
code/patchwork/patchwork_human_player/: Cargo.toml
code/patchwork/patchwork_human_player/src/: human_player.rs
code/patchwork/patchwork_lib/: Cargo.toml
code/patchwork/patchwork_lib/src/: lib.rs
code/patchwork/patchwork_macros/: Cargo.toml
code/patchwork/patchwork_macros/src/: lib.rs
code/patchwork/patchwork_mcts_player/: Cargo.toml
code/patchwork/patchwork_mcts_player/src/: mcts_player.rs  search_tree.rs
code/patchwork/patchwork_minimax_player/: Cargo.toml
code/patchwork/patchwork_minimax_player/src/: lib.rs  minimax_options.rs  minimax_player.rs
code/patchwork/patchwork_negamax_player/: Cargo.toml
code/patchwork/patchwork_negamax_player/src/: lib.rs  (+1 more)
code/patchwork/patchwork_player/: Cargo.toml
code/patchwork/patchwork_principal_variation_search_player/: Cargo.toml
code/patchwork/patchwork_random_player/: Cargo.toml
code/patchwork/patchwork_tree_policy/: Cargo.toml
code/patchwork/principal-variation-search-player/: Cargo.toml
code/patchwork/principal_variation_search_player/: Cargo.toml
code/patchwork/pv_table/: Cargo.toml
code/patchwork/random-player/: Cargo.toml
code/patchwork/random_player/: Cargo.toml
code/patchwork/server/: Cargo.toml
code/patchwork/transposition-table/: Cargo.toml
code/patchwork/transposition_table/: Cargo.toml
code/patchwork/tree-policy/: Cargo.toml
code/patchwork/tree_policy/: Cargo.toml
code/patchwork/upi/: Cargo.toml
(+404 files in other folders)
