# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
package.version = "1.0.0"
package.authors = ["Nico Zeitz", "Fabian Wolf"]
package.description = "The board game Patchwork implemented in Rust with different AI players."
package.repository = "https://github.com/NicoZeitz/Studienarbeit"
package.license = "MIT"
members = [
    "console",
    "patchwork",
    "patchwork_core",
    "patchwork_macros",
    "patchwork_evaluator",
    "patchwork_human_player",
    "patchwork_random_player",
    "patchwork_greedy_player",
    "patchwork_mcts_player",
    "patchwork_minimax_player",
    "patchwork_principal_variation_search_player",
    "patchwork_alphazero_player",
    "tree_policy",
]
resolver = "2"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
