# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
package.version = "1.0.0"
package.authors = ["Nico Zeitz", "Fabian Wolf"]
package.description = "The board game Patchwork implemented in Rust with different AI players."
package.repository = "https://github.com/NicoZeitz/Studienarbeit"
package.license = "MIT"
members = [
    "action_orderer",
    "alphazero_player",
    "analysis/empirical_measurement",
    "console",
    "evaluator",
    "greedy_player",
    "human_player",
    "mcts_player",
    "minimax_player",
    "patchwork_core",
    "patchwork_macros",
    "patchwork",
    "principal_variation_search_player",
    "pv_table",
    "random_player",
    "transposition_table",
    "tree_policy",
]
resolver = "2"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
