# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
package.version = "1.0.0"
package.authors = ["Fabian Wolf", "Nico Zeitz"]
package.description = "The board game Patchwork implemented in Rust with different AI players."
package.repository = "https://github.com/NicoZeitz/Studienarbeit"
package.license = "MIT"
members = [
    "action-orderer",
    "alphazero-player",
    "analysis/empirical-measurement",
    "analysis/max-button-income",
    "evaluator",
    "greedy-player",
    "human-player",
    "mcts-player",
    "minimax-player",
    "patchwork-core",
    "patchwork-macros",
    "patchwork-lib",
    "patchwork",
    "principal-variation-search-player",
    "random-player",
    "server",
    "transposition-table",
    "tree-policy",
    "upi",
]
resolver = "2"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# https://doc.rust-lang.org/cargo/reference/profiles.html#custom-profiles
# https://deterministic.space/high-performance-rust.html
# cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
lto = "fat"          # Link Time Optimization
opt-level = 3        # Optimization level
panic = "abort"      # Abort on panic
codegen-units = 1    # Number of threads to use for codegen
strip = "symbols"    # Strip debug symbols

# override debug_assertions = true
[profile.fast-debug]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

# [target.'cfg(any(windows, unix))']
# rustflags = ["-C target-cpu=native"]
