[package]
name = "action-orderer"
description = "A library for ordering actions in a patchwork game"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lazy_static = "1.4.0"
patchwork-core = { path = "../patchwork-core" }

[dev-dependencies]
criterion = { version = "0.4" }
rand = "0.8.5"

[[bench]]
name = "performance"
harness = false
