[package]
name = "alphazero-player"
description = "An alphaZero player for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl"]
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]

[dependencies]
candle-core = { version = "0.4.0", git = "https://github.com//huggingface/candle.git" }
candle-nn = { version = "0.4.0", git = "https://github.com//huggingface/candle.git" }
patchwork-core = { path = "../patchwork-core" }
rand = "0.8.5"
rand_distr = "0.4.3"
tqdm = "0.6.0"

[[bin]]
name = "alphazero-player_verification"
path = "src/verification.rs"
