[package]
name = "alphazero_player"
description = "An alphaZero player for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
candle-core = { version = "0.3.2", features = ["mkl"] }
candle-nn = { version = "0.3.2", features = ["mkl"] }
patchwork_core = { path = "../patchwork_core" }
