[package]
name = "alphazero_player"
description = "An alphaZero player for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl"]
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]

[dependencies]
candle-core = { version = "0.3.3", git = "https://github.com//huggingface/candle.git" }
candle-nn = { version = "0.3.3", git = "https://github.com//huggingface/candle.git" }
patchwork_core = { path = "../patchwork_core" }

[[bin]]
name = "alphazero_player_verification"
path = "src/verification.rs"
