[package]
name = "application"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
server = { path = "../server" }
patchwork = { path = "../patchwork" }
anyhow = "1.0.79"
rustyline = "13.0.0"
clap = "4.4.18"
ctrlc = "3.4.2"
