[package]
name = "evaluator"
description = "Evaluators for game positions in patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl"]
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]

[dependencies]
candle-core = { version = "0.3.3", git = "https://github.com//huggingface/candle.git" }
candle-nn = { version = "0.3.3", git = "https://github.com//huggingface/candle.git" }
linfa = "0.7.0"
patchwork_core = { path = "../patchwork_core" }
