[package]
name = "evaluator"
description = "Evaluators for game positions in patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
mkl = ["candle-core/mkl", "candle-nn/mkl"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
candle-core = { version = "0.5.1", git = "https://github.com//huggingface/candle.git" }
candle-nn = { version = "0.5.1", git = "https://github.com//huggingface/candle.git" }
lazy_static = "1.4.0"
linfa = "0.7.0"
patchwork-core = { path = "../patchwork-core" }

[dev-dependencies]
criterion = { version = "0.4" }
rand = "0.8.5"

[[bench]]
name = "performance"
harness = false
