[package]
name = "mcts_player"
description = "Monte Carlo Tree Search (MCTS) player for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork_core = { path = "../patchwork_core" }
tree_policy = { path = "../tree_policy" }
evaluator = { path = "../evaluator" }
itertools = "0.12.0"
rand = "0.8.5"
rayon = "1.8.1"
