[package]
name = "minimax_player"
description = "A simple minimax player for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork_core = { path = "../patchwork_core" }
evaluator = { path = "../evaluator" }
rand = "0.8.5"
