[package]
name = "optimizing-player"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = { version = "1.7.0", default-features = false, features = ["lpsolve"] }
lpsolve = "0.1.0"

[lints]
workspace = true
