[package]
name = "optimizing-player"
description = "An optimizing player for the game of Patchwork."
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = "2.5.0"
itertools = "0.12.1"
libc = "0.2.153"
lpsolve-sys = { git = "https://github.com/Virtlink/rust-lpsolve.git", version = "5.5.0" }
patchwork-core = { path = "../patchwork-core" }
rand = "0.8.5"
