[package]
name = "patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
mkl = ["patchwork-lib/mkl", "server/mkl"]
cuda = ["patchwork-lib/cuda", "server/cuda"]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
patchwork-lib = { path = "../patchwork-lib" }
regex = "1.10.3"
rustyline = "13.0.0"
server = { path = "../server" }
titlecase = "2.2.1"
upi = { path = "../upi" }
