[package]
name = "patchwork_core"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derivative = "2.2.0"
lazy_static = "1.4.0"
patchwork_macros = { path = "../patchwork_macros" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
thiserror = "1.0.51"
regex = "1.10.2"
const_format = "0.2.32"
pretty_assertions = "1.4.0"
anyhow = "1.0.76"
