[package]
name = "patchwork_core"
description = "Core game logic library for Patchwork."
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lazy_static = "1.4.0"
patchwork_macros = { path = "../patchwork_macros" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
thiserror = "1.0.51"
regex = "1.10.2"
const_format = "0.2.32"
anyhow = "1.0.76"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.13"

[dev-dependencies]
criterion = { version = "0.4" }
pretty_assertions = "1.4.0"
bincode = "1.3.3"

[[bench]]
name = "performance"
harness = false
