[package]
name = "patchwork_human_player"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork_core = { path = "../patchwork_core" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
regex = "1.10.2"
