[package]
name = "patchwork_lib"
description = "The package bundles all the libraries (core, players) used by Patchwork."
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
mkl = ["evaluator/mkl", "alphazero_player/mkl"]
cuda = ["evaluator/cuda", "alphazero_player/cuda"]

[dependencies]
action_orderer = { path = "../action_orderer" }
patchwork_core = { path = "../patchwork_core" }
evaluator = { path = "../evaluator" }
patchwork_macros = { path = "../patchwork_macros" }
alphazero_player = { path = "../alphazero_player" }
human_player = { path = "../human_player" }
random_player = { path = "../random_player" }
greedy_player = { path = "../greedy_player" }
mcts-player = { path = "../mcts-player" }
minimax_player = { path = "../minimax_player" }
tree_policy = { path = "../tree_policy" }
principal_variation_search_player = { path = "../principal_variation_search_player" }
