[package]
name = "patchwork_mcts_player"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork_core = { path = "../patchwork_core" }
patchwork_tree_policy = { path = "../patchwork_tree_policy" }
patchwork_evaluator = { path = "../patchwork_evaluator" }
rand = "0.8.5"
