[package]
name = "principal_variation_search_player"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork_core = { path = "../patchwork_core" }
evaluator = { path = "../evaluator" }
action_orderer = { path = "../action_orderer" }
rand = "0.8.5"
itertools = "0.12.0"
transposition_table = { path = "../transposition_table" }
