[package]
name = "server"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
mime_guess = "2.0.4"
patchwork = { path = "../patchwork" }
rust-embed = { version = "8.2.0", features = ["axum", "compression"] }
tokio = { version = "1.35.1", features = ["signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
