[package]
name = "server"
description = "A simple server for the webapp of patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7.4", features = ["tracing", "ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
futures-util = { version = "0.3.30", features = ["sink", "std"] }
headers = "0.4.0"
mime_guess = "2.0.4"
rust-embed = { version = "8.2.0", features = ["axum", "compression"] }
tokio = { version = "1.35.1", features = ["signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
