[package]
name = "transposition-table"
description = "A transposition table for patchwork"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
patchwork-core = { path = "../patchwork-core" }
rand = "0.8.5"
itertools = "0.12.0"
